--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,16 @@ nav {
   height: 60px;
   align-items: center;
 }
+.menu-bar:hover {
+  color: blue;
+}
 .menu-bar li {
   list-style: none;
   margin: 10px;
 }
 #tools {
   margin-top: 32px;
+}
+#tools:hover {
+  color: blue;
 }
