--- a/styles/style.css
+++ b/styles/style.css
@@ -79,3 +79,9 @@ span {
 .first-photo:hover .photo{
     transform: scale(1.5);
 }
+h2{
+    text-align: center;
+    margin: 50px;
+    padding: 50px;
+    color: sienna;
+}
