--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,9 @@
 body {
   font-family: "Oswald", sans-serif;
 }
+main{
+  background-color: lightsteelblue
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -106,6 +109,60 @@ h2{
   box-shadow: 10px 5px 10px gray;
 }
 .see-more{
+display: flex;
+justify-content: end;
+}
+
+.audio{
   display: flex;
-  flex-direction: row;
+  position: relative;
+  margin-left: 700px;
+  width: 350px;
+  box-shadow: 10px 5px 10px gray;
+  background-color: aliceblue;
+}
+.media{
+  padding-bottom: 40px;
+}
+#sound{
+  text-align: center;
+}
+.audio .lipa{
+  position: relative;
+  width: 100%;
+  height: 300px;
+  padding: 20px;
+}
+.audio .lipa img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.audio audio{
+  width: 100%;
+}
+footer{
+  width: 100%;
+  height: 190px;
+  background-color: darkslateblue;
+  color: whitesmoke;
+  padding-top: 10px;
+}
+.tag{
+  padding-top: 30px;
+  font-size: 35px;
+  text-align: center;
+}
+p{
+  padding-top: 5px;
+  text-align: center;
+  display: block;
+}
+.icons{
+  padding-top: 5px;
+  text-align: center;
+  padding-bottom: 10px;
 }
