--- a/styles/style.css
+++ b/styles/style.css
@@ -167,8 +167,18 @@ p{
 
 /* mobile device */
 @media only screen and (max-width: 688px){
-  main{
-    background-color: cadetblue;
+ 
+ .container, .first-section, .tools, .gears, .media{
+   grid-template-columns: repeat(1. 1fr);
+ }
+  .container{
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 10px;
+    padding: 8px 12px;
   }
-  
+  .container, .first-section, .tools, .gears, .media{
+    flex-direction: column;
+    align-items: center;
+  }
 }
