--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ main{
   background-color: lightsteelblue
 }
 .container {
-  max-width: 1200px;
+  width: 100;
   margin: 0 auto;
   padding: 0 30px;
 }
@@ -217,6 +217,5 @@ p{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: -0.4px;
   }
 }
