--- a/styles/style.css
+++ b/styles/style.css
@@ -167,11 +167,9 @@ p{
 
 /* mobile device */
 @media only screen and (max-width: 576px){
-  main{
-    width: 100%;
-    padding: 30px 0;
-    margin: 0 0;
-    
+  *{
+    margin: 0%;
+    padding: 0%;
   }
  
  .container{
@@ -212,10 +210,5 @@ p{
     flex-direction: column;
     align-items: center;
     padding-right: 20px;
-  }
-  .media{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 }
