--- a/styles/style.css
+++ b/styles/style.css
@@ -108,39 +108,34 @@ h2{
 text-align: right;
 padding-right: 140px;
 }
-
-.audio{
-  display: flex;
-  position: relative;
-  margin-left: 700px;
-  width: 350px;
-  box-shadow: 10px 5px 10px gray;
-  background-color: aliceblue;
-  padding-left: 10px;
+form{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
 }
-.media{
-  text-align: center;
-  padding-bottom: 40px;
+.section-title{
+  display: grid;
+  grid-template-columns: 1fr;
 }
-#sound{
-  text-align: center;
+.name{
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 18px;
 }
-.audio .lipa{
-  position: relative;
-  width: 100%;
-  height: 300px;
-  padding: 20px;
+.mail{
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 18px;
 }
-.audio .lipa img{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.text-field{
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 18px;
 }
-.audio audio{
-  width: 100%;
+.primary-button{
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 18px;
 }
 footer{
   width: 100%;
