--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@ span {
 }
 .first-photo{
     overflow: hidden;
-    margin: 30px;
+    /* margin: 30px; */
     padding: 30px;
 }
 .first-photo:hover .photo{
@@ -79,7 +79,7 @@ span {
 }
 h2{
     text-align: center;
-    margin: 50px;
+    /* margin: 50px; */
     padding: 50px;
     color: sienna;
 }
@@ -161,10 +161,13 @@ p{
 }
 
 /* mobile device */
-@media only screen and (max-width: 576px){
-  *{
-    margin: 0%;
-    padding: 0%;
+@media only screen and (max-width: 550px){
+  html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
   }
  
  .container{
@@ -206,4 +209,52 @@ p{
     align-items: center;
     padding-right: 20px;
   }
+}
+
+/* table device */
+@media only screen and (max-width: 768px) {
+  /* html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  } */
+  .container{
+    grid-template-columns: repeat(2, 1fr);
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 10px;
+    padding: 8px 12px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .first-section{
+    grid-template-columns: repeat(2, 1fr);
+    /* flex-direction: column;
+    align-items: center; */
+  }
+  .camera .first-head{
+    text-align: center;
+  }
+  .first-para{
+    text-align: center;
+    padding-right: 20px;
+  }
+  .view{
+    align-items: center;
+  }
+  .first-section img{
+    padding-left: 30px;
+  }
+  .second-section .tools .gears{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .tools{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 20px;
+  }
+
 }
