--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ main{
   background-color: lightsteelblue
 }
 .container {
-  width: 100;
+  /* width: 100%; */
   margin: 0 auto;
   padding: 0 30px;
 }
@@ -64,7 +64,7 @@ span {
 }
 .first-para {
   padding-right: 10px;
-  display: block;
+  flex-wrap: nowrap;
 }
 .fa-arrow-right {
   padding-left: 5px;
@@ -212,49 +212,21 @@ p{
 }
 
 /* table device */
-@media only screen and (max-width: 768px) {
-  /* html, body{
+@media only screen and (min-width: 688px)  and (max-width: 950px) {
+  html, body{
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-  } */
-  .container{
-    grid-template-columns: repeat(2, 1fr);
-    font-size: 16px;
-    font-weight: 400;
-    border-radius: 10px;
-    padding: 8px 12px;
-    flex-direction: column;
-    align-items: center;
   }
   .first-section{
-    grid-template-columns: repeat(2, 1fr);
-    /* flex-direction: column;
-    align-items: center; */
-  }
-  .camera .first-head{
-    text-align: center;
-  }
-  .first-para{
-    text-align: center;
-    padding-right: 20px;
-  }
-  .view{
-    align-items: center;
-  }
-  .first-section img{
-    padding-left: 30px;
-  }
-  .second-section .tools .gears{
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
   .tools{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-right: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
 }
